# Redash_Chatbot_LLM

./: .gitignore  Dockerfile  Dockerfile.quart  LICENSE  Makefile  README.md  alembic.ini  compose.yaml  load_data.py  nginx.conf  package.json  requirements.txt
.github/workflows/: ci.yml  deploy.yml
client/app/components/chat/: ChatBox.jsx
notebooks/: automate_visual_types.ipynb  data_exploration.ipynb  data_understanding.ipynb  data_understanding_local.ipynb  load_data.ipynb  merging_and_saving_data.ipynb  play_ground.ipynb  preprocess_data.ipynb
notebooks/data_exploration/: data_exploration.ipynb  data_understanding.ipynb  merging_and_saving_data.ipynb
notebooks/langchain/: LLM_OpenAI_langchain_doc.ipynb  chatbot.ipynb  fetch_schema_for_llm.ipynb  langchain_chatbot_example.ipynb  openai_api_usage.ipynb
quart-server/api/: __init__.py  tasks.py
quart-server/src/: utils.py
redash/: app.py  flask_api_openai.py  langchain_intergration.py  my_app.py  quart_app.py  requirements.txt  test_quart.py
redash/api/: requirements.txt
redash/api/src/api/: __init__.py  tasks.py
redash/api/src/utils/: chat_history.py  utils.py
redash/client/app/services/: axios.js  chat.js
redash/handlers/: api.py  chat.py  decorators.py  visualizations.py
redash/redash/api/: pyproject.toml
redash/redash/api/src/api/: __init__.py
redash/redash/api/src/utils/: utils.py
redash/redash/handlers/: visualizations.py
redash/src/: decorators.py
redash/templates/: index.html
scripts/: save_to_db.py
src/: config.py  decorators.py  utils.py
utils/: utils.py
(+2 files in other folders)
